# kc_django

./: .dockerignore  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
game/: admin.py  models.py  translation.py  views.py
game/migrations/: 0001_initial.py  0002_alter_task_options_task_description_en_and_more.py  0003_usertask_completedtask_task_users.py  0004_completedtask_is_public_completedtask_photo.py  0005_alter_completedtask_photo.py  0006_alter_completedtask_photo.py  0007_completedtask_date_completed.py  0008_completedtask_task_verified.py  0009_emojireaction.py
game/static/: style.css
kc_django/: asgi.py  settings.py  urls.py  wsgi.py
locale/en/LC_MESSAGES/: django.po
locale/pl/LC_MESSAGES/: django.mo  django.po
templates/: _base.html  dashboard.html  gallery.html  index.html  task_detail.html  tasks.html
templates/registration/: login.html  signup.html
