[project]
name = "kc-django"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-environ>=0.12.0",
    "django-modeltranslation>=0.19.12",
    "django>=5.1.6,<5.2.0",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.9",
]
